--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "parse": "^2.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
